cabal-version: >=1.12

Name: Parsix
Version: 0.0.1.0
synopsis: Parser combinator library inspired by elm/parser
-- description:
-- bug-reports:
license: BSD3
license-file: LICENSE
author: Adrian Gabriel
maintainer: lawsdontapplytopigs@gmail.com
-- copyright:
category: Parsing
build-type: Simple

source-repository head
    type : git
    location : git://github.com/lawsdontapplytopigs/Parsix.git

library Parsix
    hs-source-dirs: src
    exposed-modules:
        Parsix
    -- other-modules:
    -- other-extensions:
    build-depends:       base >=4.14 && <4.15
    -- hs-source-dirs:
    default-language:    Haskell2010
